--- a/TODO
+++ b/TODO
@@ -6,9 +6,8 @@ general reminders
 - check all bulkserver()'s for free_desc()
 - sweep tree for \b0[0-9] and fix bad permissions (711 -> 700 - slash?)
 - ctlapi GETTREE?
-- zap [us]{64,32,16,8} typedefs
 - investigate pthread_rwlocks for things like trees and large lists
-- watch out for "a - b" in cmp functions overflowing
+- watch out for "a - b" in cmp functions overflowing, use CMP() instead
 - investigate if our sched_yield() calls are correct
 - watch out for lock reinitialization (i.e. LOCK_INIT twice)
 - minimize ifdef's in pfl
@@ -27,7 +26,7 @@ make
 - introduce APP_BASE
 
 pfl
-- pfl: use "psc_" prefix and "_mt" (multithread-safe) postfix
+- pfl: use "psc_/pfl_" prefix and "_mt" (multithread-safe) postfix
 - for psclog(), add extensibility mechanism for fmtstr,
   allowing app-specific callbacks (e.g. %r for zest clients)
 - create a generic refcnt manager for thread-safe activity
