TODO: remove finished things, elaborate on some parts, tidy
git-svn-id: svn+ssh://frodo/cluster/svn/projects@9428 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/TODO
+++ b/TODO
@@ -63,6 +63,7 @@ pfl
     PSC_CTLRET_BAIL - drop the connection
 
   give them obscure values (42,43) and ensure they are returned
+- ensure everything in pscrpc land is prefixed with 'pscrpc'
 
 zest
 - research faster CRC operations
