- rename multilock to multiwait.  multilock was a horrible name that gave   no insight into what this API actually does - simplify the waker condition winning in psc_multiwait() - simplify some code by using DYNARRAY_FOREACH() - fix an issue when the vbitmap gets corrupted by psc_multiwaitcond_destroy() - detect a hopefully impossible issue with dangling pointers when an event   that wakes a multiwait soon after gets destroyed then corrupts the multiwait - perform more error checking on the pthread mutex primitives - add a few miscellaenous sanity checks - fix a possible race when a multilock gets awoken, loses winning the condition,   and misses events before preparing to go back to sleep
git-svn-id: svn+ssh://frodo/cluster/svn/projects@9453 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/TODO
+++ b/TODO
@@ -64,6 +64,10 @@ pfl
 
   give them obscure values (42,43) and ensure they are returned
 - ensure everything in pscrpc land is prefixed with 'pscrpc'
+- RETURN() used in code is actually from libcfs.h
+- rename bitflag.h -> bitstr.h
+- let caller worry about memory for vbitmaps, don't return pointers
+- bail if multiwait_addcond() fails
 
 zest
 - research faster CRC operations
@@ -83,7 +87,7 @@ zest
   because there could still be open fd's to it, built into zsyncmgt
 - new pull model for zest server to client:
   server RPCIO threads issue GETs to connected mount_zests
-    (o) need some way to "multilock" on multiple requests sent
+    (o) need some way to "multiwait" on multiple requests sent
 	to different clients
 - when mount_zest is idle, have it merge dirty zcf zsb channels
 - ensure libzestclient is not paritying over partial buffers
