--- a/TODO
+++ b/TODO
@@ -68,6 +68,7 @@ pfl
 - let caller worry about memory for vbitmaps, don't return pointers
 - bail if multiwait_addcond() fails
 - psclist_add_sorted() - maintain a median element for faster sorting
+- add a variable printbin()
 
 zest
 - research faster CRC operations
