--- a/TODO
+++ b/TODO
@@ -70,6 +70,7 @@ pfl
 - psclist_add_sorted() - maintain a median element for faster sorting
 - add a variable printbin()
 - rename psc_bitstr_setchk -> psc_bitfield_setchk
+- introduce refmgr
 
 zest
 - research faster CRC operations
