--- a/TODO
+++ b/TODO
@@ -74,6 +74,7 @@ pfl
 - add a variable-length printbin() dumper
 - rename psc_bitstr_setchk -> psc_bitfield_setchk
 - add 'psc_' prefix to nbrequest API
+- remove lc_ ops that operate on psclist_head's
 
 zest
 - research faster CRC operations
