more TODO reminders
git-svn-id: svn+ssh://frodo/cluster/svn/projects@10085 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/TODO
+++ b/TODO
@@ -21,6 +21,7 @@ general reminders
   memory, as you can allocate >sizeof(struct) and point the
   private data pointer past
 - ensure no mp RPC message bodies are used after a pscrpc_req_finished()
+- check -Wuninitialized and others
 
 make
 - rename ROOTDIR -> PROJ_BASE
