add short hostname and constify hostname
git-svn-id: svn+ssh://frodo/cluster/svn/projects@10130 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/doc/pflenv.7
+++ b/doc/pflenv.7
@@ -71,8 +71,10 @@ The following specifiers are recognized:
 function name from where log message originated
 .It Ic f
 file name from where log message originated
+.It Ic H
+full host name from where log message originated
 .It Ic h
-host name from where log message originated
+short host name from where log message originated
 .It Ic i
 ID of thread which generated log message
 .It Ic L
