--- a/TODO
+++ b/TODO
@@ -28,6 +28,7 @@ make
 - rename ROOTDIR -> PROJ_BASE
 - introduce APP_BASE
 - ensure all SRCS exist
+- make spins if no SRCS or SUBDIRS
 
 pfl
 - ctlapi GETTREE?
