add some more reminders
git-svn-id: svn+ssh://frodo/cluster/svn/projects@11676 3eda493b-6a19-0410-b2e0-ec8ea4dd8fda

--- a/TODO
+++ b/TODO
@@ -21,6 +21,7 @@ general reminders
   private data pointer past
 - ensure no mp RPC message bodies are used after a pscrpc_req_finished()
 - check -Wuninitialized and others
+- no strcpy, strcat, gets, sscanf without bounds
 
 make
 - rename ROOTDIR -> PROJ_BASE
